sistema de likes

--- a/src/pages/ProfileUser/styles.css
+++ b/src/pages/ProfileUser/styles.css
@@ -95,7 +95,6 @@
     margin-left: 950px;
 }
 
-#researcherName {
-    margin-left: 505px;
-    display: block;
+#likeBtn {
+    margin-right: 2px;
 }
