--- a/src/pages/ProfileUser/styles.css
+++ b/src/pages/ProfileUser/styles.css
@@ -56,6 +56,9 @@
     padding:24px;
     border-radius: 8px;
     position: relative;
+    -webkit-box-shadow: 11px 11px 5px -4px rgba(196,200,242,1);
+    -moz-box-shadow: 11px 11px 5px -4px rgba(196,200,242,1);
+    box-shadow: 11px 11px 5px -4px rgba(196,200,242,1);
 }
 
 .profile-container ul li button{
