--- a/src/pages/ProfileUser/styles.css
+++ b/src/pages/ProfileUser/styles.css
@@ -94,8 +94,8 @@
     margin-right: 40px;
 }
 
-#navigationButton {
-    margin-left: 850px;
+#friendsBtn {
+    margin-left: 780px;
 }
 
 #navigationAccount {
